--- a/css.css
+++ b/css.css
@@ -135,6 +135,7 @@ h2{
     width: 1170;
     height: 370;
     display: flex;
+    justify-content: space-between;
     
 }
 .footer_image{
@@ -150,9 +151,6 @@ h2{
     font-size: 34px;
     line-height: 45px;
     display: flex;
-    white-space: nowrap;
-    position: relative;
-    z-index: 1;
     flex-shrink: 0;
     padding-top: 70px;
     padding-left: 70px;
